crates/pamoja-ffi/include/pamoja.h

// The result of a fallible pamoja call.
//
// A return of [`PamojaStatus::Ok`] means success; any other value indicates a
// failure whose description is available from [`pamoja_last_error_message`] on
// the same thread.
typedef enum {
  // The call succeeded.
  PamojaStatus_Ok = 0,
  // A transport-level failure while connecting, sending, or receiving.
  PamojaStatus_Transport = 1,
  // A device or peripheral input/output operation failed.
  PamojaStatus_Io = 2,
  // A payload could not be encoded or decoded.
  PamojaStatus_Codec = 3,
  // The operation targeted a resource that is closed or disconnected.
  PamojaStatus_Closed = 4,
  // The requested capability is not compiled into this build.
  PamojaStatus_Unsupported = 5,
  // An argument was null or otherwise invalid, for example non-UTF-8 text.
  PamojaStatus_InvalidArgument = 6,
  // A failure that does not map onto a more specific status.
  PamojaStatus_Other = 7,
  // A Rust panic was caught at the boundary; the call had no effect.
  PamojaStatus_Panic = 8,
  // A security check failed, such as an invalid identity or a bad signature.
  PamojaStatus_Auth = 9,
} PamojaStatus;
// The radio settings of a LoRa link.
//
// Build one with [`pamoja_lora_link_default`] and adjust the fields that differ
// from the defaults. Values outside the ranges LoRa defines are clamped when the
// link is used: the spreading factor to 5-12, the coding-rate denominator to 5-8,
// and a bandwidth of 0 to one hertz.
typedef struct {
  // The channel bandwidth in hertz, such as `125000`.
  uint32_t bandwidth_hz;
  // The preamble length in symbols; the LoRa default is 8.
  uint16_t preamble_symbols;
  // The spreading factor, 5 (fastest) to 12 (longest range).
  uint8_t spreading_factor;
  // The coding-rate denominator, 5 to 8, for 4/5 to 4/8.
  uint8_t coding_rate_denominator;
  // `1` for an explicit header, `0` to omit the header symbols.
  uint8_t explicit_header;
  // `1` to append the frame CRC, `0` to leave it off.
  uint8_t crc;
} PamojaLoraLink;
// The gains and losses of a LoRa link, from the transmitting radio to the receiving one.
//
// Every field is in hundredths of a decibel, so `1400` is 14 dBm and `215` is 2.15 dBi.
// Build one with [`pamoja_lora_link_budget_default`] and set the fields a deployment
// chooses: the transmit power, the antenna and cable at each end, and the noise figure of
// the receiver.
typedef struct {
  // The power the transmitting radio delivers at its antenna port, in hundredths of a
  // dBm.
  int32_t transmit_power_centi_dbm;
  // The gain of the transmitting antenna over an isotropic antenna, in hundredths of a
  // dBi.
  int32_t transmit_antenna_gain_centi_dbi;
  // The loss in the cable and connectors between the transmitting radio and its
  // antenna, in hundredths of a dB.
  int32_t transmit_cable_loss_centi_db;
  // The gain of the receiving antenna over an isotropic antenna, in hundredths of a
  // dBi.
  int32_t receive_antenna_gain_centi_dbi;
  // The loss in the cable and connectors between the receiving antenna and its radio,
  // in hundredths of a dB.
  int32_t receive_cable_loss_centi_db;
  // The noise figure of the receiver, in hundredths of a dB.
  int32_t noise_figure_centi_db;
} PamojaLoraLinkBudget;
// The amplifier settings of an SX127x: RegPaConfig, RegPaDac, and RegOcp.
typedef struct {
  // RegPaConfig: PaSelect, MaxPower, and OutputPower.
  uint8_t pa_config;
  // RegPaDac: the +20 dBm setting above +17 dBm on PA_BOOST, else its reset value.
  uint8_t pa_dac;
  // RegOcp: the current limit.
  uint8_t ocp;
  // The output power the settings produce, in dBm.
  int8_t output_dbm;
} PamojaSx127xTxPower;
// The writes of the SX127x 500 kHz sensitivity erratum.
typedef struct {
  // The RegHighBwOptimize1 value.
  uint8_t optimize_1;
  // The RegHighBwOptimize2 value, when `has_optimize_2` is set.
  uint8_t optimize_2;
  // Whether RegHighBwOptimize2 is written.
  bool has_optimize_2;
} PamojaSx127xHighBwOptimize;
// The receive settings of the SX127x spurious reception erratum.
typedef struct {
  // Whether AutomaticIFOn, bit 7 of RegDetectOptimize, stays on.
  bool automatic_if;
  // Whether RegIfFreq2 is set by hand, with RegIfFreq1 cleared.
  bool has_if_freq_2;
  // The RegIfFreq2 value, when `has_if_freq_2` is set.
  uint8_t if_freq_2;
  // How far above the carrier to receive, in hertz.
  uint32_t offset_hz;
} PamojaSx127xSpuriousReception;
// The signal levels of a packet an SX127x received, in hundredths of a decibel.
typedef struct {
  // The RSSI averaged over the packet, in hundredths of a dBm.
  int32_t rssi_centi_dbm;
  // The estimated signal-to-noise ratio, in hundredths of a dB.
  int32_t snr_centi_db;
  // The strength of the packet itself, in hundredths of a dBm.
  int32_t signal_rssi_centi_dbm;
} PamojaSx127xPacketStatus;
// The live state of an SX127x LoRa modem, from RegModemStat.
typedef struct {
  // The coding rate denominator the last header announced, 5 to 8, or 0 for a reserved
  // value.
  uint8_t coding_rate_denominator;
  // The modem is clear.
  bool clear;
  // The header of the packet under way is valid.
  bool header_valid;
  // A reception is under way.
  bool rx_ongoing;
  // The modem has synchronized on the end of the preamble.
  bool signal_synchronized;
  // A LoRa preamble has been detected.
  bool signal_detected;
} PamojaSx127xModemStatus;
// Returns the SX127x amplifier settings that keep a link's EIRP at or under a ceiling.
//
// # Arguments
//
// * `pa_boost` - `true` for the PA_BOOST output, `false` for RFO.
// * `budget` - the link budget, whose transmitting antenna and cable apply.
// * `eirp_ceiling_centi_dbm` - the EIRP limit in hundredths of a dBm.
//
// # Returns
//
// The settings, rounded down to whole decibels.
PamojaSx127xTxPower pamoja_sx127x_tx_power_under_ceiling(bool pa_boost,
                                                         PamojaLoraLinkBudget budget,
                                                         int32_t eirp_ceiling_centi_dbm);
// Returns RegOcp for a current limit.
//
// # Arguments
//
// * `milliamps` - the most current the amplifier may draw.
//
// # Returns
//
// The register value with the protection on.
uint8_t pamoja_sx127x_ocp_register(uint16_t milliamps);
// Returns RegInvertIQ for the IQ polarity of each path.
//
// # Arguments
//
// * `receive` - whether to invert the receive path.
// * `transmit` - whether to invert the transmit path.
//
// # Returns
//
// The register value, with the transmit bit set for normal IQ as the reference drivers
// have it.
uint8_t pamoja_sx127x_invert_iq(bool receive, bool transmit);
// Returns RegInvertIQ2 for the path in use.
//
// # Arguments
//
// * `inverted` - whether that path is inverted.
//
// # Returns
//
// 0x19 when inverted, else 0x1D.
uint8_t pamoja_sx127x_invert_iq_2(bool inverted);
// Returns the writes of the 500 kHz sensitivity erratum for a link at a carrier.
//
// # Arguments
//
// * `link` - the link settings, whose bandwidth decides.
// * `frequency_hz` - the carrier frequency in hertz.
// * `out_optimize` - receives the writes.
//
// # Returns
//
// [`PamojaStatus::Ok`] with `*out_optimize` set, or [`PamojaStatus::InvalidArgument`] if the
// SX127x has no such bandwidth or `out_optimize` is null.
//
// # Safety
//
// `out_optimize` must point to a writable [`PamojaSx127xHighBwOptimize`], or be null.
PamojaStatus pamoja_sx127x_high_bw_optimize(PamojaLoraLink link,
                                            uint32_t frequency_hz,
                                            PamojaSx127xHighBwOptimize *out_optimize);
// Returns the receive settings of the spurious reception erratum for a link.
//
// # Arguments
//
// * `link` - the link settings, whose bandwidth decides.
// * `out_erratum` - receives the settings.
//
// # Returns
//
// [`PamojaStatus::Ok`] with `*out_erratum` set, or [`PamojaStatus::InvalidArgument`] if the
// SX127x has no such bandwidth or `out_erratum` is null.
//
// # Safety
//
// `out_erratum` must point to a writable [`PamojaSx127xSpuriousReception`], or be null.
PamojaStatus pamoja_sx127x_spurious_reception(PamojaLoraLink link,
                                              PamojaSx127xSpuriousReception *out_erratum);
// Returns RegImageCal to start a calibration.
//
// # Arguments
//
// * `current` - the register's current value.
//
// # Returns
//
// The value with ImageCalStart set and AutoImageCalOn clear.
uint8_t pamoja_sx127x_image_cal_start(uint8_t current);
// Returns RegDetectOptimize with AutomaticIFOn set or clear.
//
// # Arguments
//
// * `current` - the register's current value.
// * `automatic_if` - whether the automatic IF stays on.
//
// # Returns
//
// The register value.
uint8_t pamoja_sx127x_automatic_if(uint8_t current, bool automatic_if);
// Decodes RegPktSnrValue and RegPktRssiValue.
//
// # Arguments
//
// * `pkt_snr` - the RegPktSnrValue byte.
// * `pkt_rssi` - the RegPktRssiValue byte.
// * `frequency_hz` - the carrier the packet was received on, which picks the RF port's
//   offset.
//
// # Returns
//
// The three levels in hundredths of a decibel.
PamojaSx127xPacketStatus pamoja_sx127x_packet_status_from_bytes(uint8_t pkt_snr,
                                                                uint8_t pkt_rssi,
                                                                uint32_t frequency_hz);
// Decodes RegRssiValue.
//
// # Arguments
//
// * `byte` - the RegRssiValue byte.
// * `frequency_hz` - the carrier the receiver is tuned to, which picks the RF port's offset.
//
// # Returns
//
// The RSSI in hundredths of a dBm.
int32_t pamoja_sx127x_rssi_centi_dbm(uint8_t byte, uint32_t frequency_hz);
// Decodes RegModemStat.
//
// # Arguments
//
// * `byte` - the register value.
//
// # Returns
//
// The modem's state.
PamojaSx127xModemStatus pamoja_sx127x_modem_status_from_byte(uint8_t byte);