bindings/dotnet/src/Pamoja.Native/Interop/NativeMethods.Radios.cs


    /// <summary>Returns the SX127x amplifier settings that keep a link under an EIRP ceiling.</summary>
    [LibraryImport(Library)]
    public static partial PamojaSx127xTxPower pamoja_sx127x_tx_power_under_ceiling(
        [MarshalAs(UnmanagedType.U1)] bool paBoost,
        PamojaLoraLinkBudget budget,
        int eirpCeilingCentiDbm);

    /// <summary>Returns RegOcp for a current limit.</summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_sx127x_ocp_register(ushort milliamps);

    /// <summary>Returns RegInvertIQ for the IQ polarity of each path.</summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_sx127x_invert_iq(
        [MarshalAs(UnmanagedType.U1)] bool receive,
        [MarshalAs(UnmanagedType.U1)] bool transmit);

    /// <summary>Returns RegInvertIQ2 for the path in use.</summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_sx127x_invert_iq_2([MarshalAs(UnmanagedType.U1)] bool inverted);

    /// <summary>Returns the writes of the 500 kHz sensitivity erratum.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sx127x_high_bw_optimize(
        PamojaLoraLink link,
        uint frequencyHz,
        out PamojaSx127xHighBwOptimize outOptimize);

    /// <summary>Returns the receive settings of the spurious reception erratum.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_sx127x_spurious_reception(
        PamojaLoraLink link,
        out PamojaSx127xSpuriousReception outErratum);

    /// <summary>Returns RegImageCal to start a calibration.</summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_sx127x_image_cal_start(byte current);

    /// <summary>Returns RegDetectOptimize with AutomaticIFOn set or clear.</summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_sx127x_automatic_if(
        byte current,
        [MarshalAs(UnmanagedType.U1)] bool automaticIf);

    /// <summary>Decodes RegPktSnrValue and RegPktRssiValue for a carrier.</summary>
    [LibraryImport(Library)]
    public static partial PamojaSx127xPacketStatus pamoja_sx127x_packet_status_from_bytes(
        byte pktSnr,
        byte pktRssi,
        uint frequencyHz);

    /// <summary>Decodes RegRssiValue for a carrier, in hundredths of a dBm.</summary>
    [LibraryImport(Library)]
    public static partial int pamoja_sx127x_rssi_centi_dbm(byte value, uint frequencyHz);

    /// <summary>Decodes RegModemStat.</summary>
    [LibraryImport(Library)]
    public static partial PamojaSx127xModemStatus pamoja_sx127x_modem_status_from_byte(byte value);
}
